Add article content caching
